--- a/documents/Rapport/motivations.tex
+++ b/documents/Rapport/motivations.tex
@@ -4,7 +4,7 @@ Il est important avant de commencer cette section de préciser le détails des d
 
 \section{Phylogénie}
 
-La phylogénie est un domaine de la biologie ayant pour but l'étude des relations de parenté entre les êtres vivants. Nous nous concentrerons sur la partie du domaine qui traite des relations entre les espèces et leurs évolutions. Pour représenter les informations, on utilise des arbres montrant les différentes espèces avec leurs caractérisques communes comme en figure \ref{arbre_phylogenie} sur laquelle chaque feuille, ici représentée en noir, correspond à une espèce actuelle. Sa lecture est très simple, on part du n\oe ud le plus haut qui correspond à l'intégralité des espèces et on descend progressivement chaque ramification qui vient sélectionner une partie des espèces suivant certaines caractéristiques. On part également du principe que chaque n\oe ud correspond à un ancêtre commun à toutes les espèces des feuilles sur lesquelles ce n\oe ud débouche.
+La phylogénie est un domaine de la biologie ayant pour but l'étude des relations de parenté entre les êtres vivants. Nous nous concentrerons sur la partie du domaine qui traite des relations entre les espèces et leurs évolutions. Pour représenter les informations, on utilise des arbres montrant les différentes espèces avec leurs caractérisques communes comme en figure \ref{arbre_phylogenie} sur laquelle chaque feuille, ici représentée en noir, correspond à une espèce actuelle. Sa lecture est très simple, on part du n\oe ud le plus haut qui correspond à l'intégralité des espèces et on descend progressivement chaque ramification qui vient sélectionner une partie des espèces suivant certaines caractéristiques noté sur les n\oe uds traversés. On part également du principe que chaque n\oe ud correspond à un ancêtre commun à toutes les espèces des feuilles sur lesquelles ce n\oe ud débouche.
 
 \begin{figure}[H]
 	\begin{center}
@@ -37,7 +37,7 @@ La phylogénie est un domaine de la biologie ayant pour but l'étude des relatio
 	\label{arbre_phylogenie}
 \end{figure}
 
-Ces arbres sont des représentations des données possédées et peuvent varier suivant sur quoi on cherche à mettre l'accent. Par exemple la figure \ref{arbre_phylogenie} et la figure \ref{arbre_phylogenie_2} représentent les mêmes espèces à partir des mêmes données mais avec un accent différent porté avant tout dans le cas de la figure \ref{arbre_phylogenie_2} sur une catégorisation de la présence de griffes ou non. Ces données sont stockées dans des matrices binaires mettant en lien chaque espèce avec ses caractéristiques comme le montre la figure \ref{matrice_espece_carac}. Le problème est alors de choisir le bon arbre, pour diriger ce choix on utilise la notion de parcimonie qui consiste à minimiser les mutations nécessaires pour atteindre les espèces visées. Les arbres ainsi obtenus sont dit parcimonieux.
+Ces arbres sont des représentations des données de la matrice et peuvent varier suivant sur quoi on cherche à mettre l'accent. Par exemple la figure \ref{arbre_phylogenie} et la figure \ref{arbre_phylogenie_2} représentent les mêmes espèces à partir des mêmes données mais avec un accent différent porté avant tout dans le cas de la figure \ref{arbre_phylogenie_2} sur une catégorisation de la présence de griffes ou non. Ces données sont stockées dans des matrices binaires mettant en lien chaque espèce avec ses caractéristiques comme le montre la figure \ref{matrice_espece_carac}. Le problème est alors de choisir le bon arbre, pour diriger ce choix on utilise la notion de parcimonie qui consiste à minimiser le nombre de ramifications nécessaires pour atteindre les espèces visées. Les arbres ainsi obtenus sont dit parcimonieux.
 
 \begin{figure}[H]
 	\begin{minipage}[c]{0.5\textwidth}
