--- a/documents/Rapport/notions.tex
+++ b/documents/Rapport/notions.tex
@@ -283,7 +283,7 @@ Soit un treillis $(T, \leq, \vee, \wedge)$ :
 \end{itemize}
 \end{definition}
 
-Nous définitions également la notion de sous treillis correspondant à prendre une partie des éléments d'un treillis tout en gardant la même relation d'ordre entre eux.
+Nous définitions également la notion de sous treillis correspondant à prendre une partie des éléments d'un treillis tout en gardant la même relation d'ordre entre eux. On parle de plongement d'un treillis dans un autre lorsque le premier peut être retrouvé comme sous treillis du second.
 
 \begin{definition}[Sous treillis]
 Soit un treillis $(T, \leq, \vee, \wedge)$ et son sous treillis $(T_S, \leq_S, \vee, \wedge)$ si et seulement si :
